--- a/ReactiveServices/MessageBus/InSingleProcessMemory/ReactiveServices.MessageBus.InSingleProcessMemory.csproj
+++ b/ReactiveServices/MessageBus/InSingleProcessMemory/ReactiveServices.MessageBus.InSingleProcessMemory.csproj
@@ -51,6 +51,26 @@
       <HintPath>..\..\packages\PostSharp.Patterns.Diagnostics.4.1.21\lib\net40\PostSharp.Patterns.Diagnostics.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ReactiveServices.Authorization, Version=0.3.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ReactiveServices.Authorization.0.3.4.0\lib\net451\ReactiveServices.Authorization.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ReactiveServices.Configuration, Version=0.2.5742.32135, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ReactiveServices.MessageBus.0.3.29\lib\net451\ReactiveServices.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ReactiveServices.Extensions, Version=0.2.5742.32099, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ReactiveServices.MessageBus.0.3.29\lib\net451\ReactiveServices.Extensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ReactiveServices.MessageBus, Version=0.3.29.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ReactiveServices.MessageBus.0.3.29\lib\net451\ReactiveServices.MessageBus.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SimpleInjector, Version=2.8.3.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SimpleInjector.2.8.3\lib\net45\SimpleInjector.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -75,26 +95,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ReactiveServices.MessageBus.InSingleProcessMemory.nuspec" />
     <None Include="ReactiveServices.MessageBus.InSingleProcessMemory.psproj" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Authorization\ReactiveServices.Authorization.csproj">
-      <Project>{7cd6309f-c689-4111-b58d-88f5ba9f3cc4}</Project>
-      <Name>ReactiveServices.Authorization</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Configuration\ReactiveServices.Configuration.csproj">
-      <Project>{2A8DDAFD-0B2B-4798-89B6-EE43AFB380F7}</Project>
-      <Name>ReactiveServices.Configuration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Extensions\ReactiveServices.Extensions.csproj">
-      <Project>{0da6b5c5-085c-4ea7-b62f-b297b22d1a67}</Project>
-      <Name>ReactiveServices.Extensions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ReactiveServices.MessageBus.csproj">
-      <Project>{e1759601-f341-419e-b978-7b753241c4d9}</Project>
-      <Name>ReactiveServices.MessageBus</Name>
-    </ProjectReference>
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
