--- a/ReactiveServices/MessageBus/Tests/packages.config
+++ b/ReactiveServices/MessageBus/Tests/packages.config
@@ -7,6 +7,9 @@
   <package id="PostSharp" version="4.1.21" targetFramework="net451" />
   <package id="PostSharp.Patterns.Diagnostics" version="4.1.21" targetFramework="net451" />
   <package id="PostSharp.Patterns.Diagnostics.NLog" version="4.1.21" targetFramework="net451" />
+  <package id="ReactiveServices.Authorization" version="0.3.4.0" targetFramework="net451" />
+  <package id="ReactiveServices.MessageBus" version="0.3.29" targetFramework="net451" />
+  <package id="SimpleInjector" version="2.8.3" targetFramework="net451" />
   <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
   <package id="SSH.NET" version="2013.4.7" targetFramework="net451" />
 </packages>
