--- a/ReactiveServices/MessageBus/InSingleProcessMemory/packages.config
+++ b/ReactiveServices/MessageBus/InSingleProcessMemory/packages.config
@@ -5,4 +5,7 @@
   <package id="PostSharp" version="4.1.21" targetFramework="net451" />
   <package id="PostSharp.Patterns.Diagnostics" version="4.1.21" targetFramework="net451" />
   <package id="PostSharp.Patterns.Diagnostics.NLog" version="4.1.21" targetFramework="net451" />
+  <package id="ReactiveServices.Authorization" version="0.3.4.0" targetFramework="net451" />
+  <package id="ReactiveServices.MessageBus" version="0.3.29" targetFramework="net451" />
+  <package id="SimpleInjector" version="2.8.3" targetFramework="net451" />
 </packages>
