--- a/ReactiveServices/MessageBus/Tests/Dependencies.config
+++ b/ReactiveServices/MessageBus/Tests/Dependencies.config
@@ -5,8 +5,9 @@
     <section name="DependencyInjections" type="ReactiveServices.Configuration.ConfigurationSections.DependencyInjectionsSection, ReactiveServices.Configuration"/>
   </configSections>
   <ReferenceAssemblies>
-    <ReferenceAssembly AssemblyName="ReactiveServices.MessageBus, Version=0.2.*, Culture=neutral, PublicKeyToken=null" />
-    <ReferenceAssembly AssemblyName="ReactiveServices.MessageBus.InSingleProcessMemory, Version=0.2.*, Culture=neutral, PublicKeyToken=null" />
+    <ReferenceAssembly AssemblyName="ReactiveServices.MessageBus, Version=0.3.*, Culture=neutral, PublicKeyToken=null" />
+    <ReferenceAssembly AssemblyName="ReactiveServices.Authorization, Version=0.3.*, Culture=neutral, PublicKeyToken=null" />
+    <ReferenceAssembly AssemblyName="ReactiveServices.MessageBus.InSingleProcessMemory, Version=0.3.*, Culture=neutral, PublicKeyToken=null" />
   </ReferenceAssemblies>
   <DependencyInjections>
     <DependencyInjection AbstractType="ReactiveServices.MessageBus.ISubscriptionBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemorySubscriptionBus" />
